# omnipaxos-demo-with-dashboard

./: .gitignore  Cargo.toml  README.md  demo.sh  docker-compose.yml
coordinator/: .gitignore  Cargo.toml  Dockerfile
coordinator/src/: controller.rs  main.rs  messages.rs  utils.rs
coordinator/src/coordinator/: mod.rs  proposal_streamer.rs
coordinator/src/db/: mod.rs
coordinator/src/ui/: mod.rs
coordinator/src/ui/ui_app/: cli.rs  mod.rs  render.rs
kv_store/: .gitignore  Cargo.toml  Dockerfile
kv_store/src/: database.rs  kv.rs  main.rs  network.rs  server.rs
omnipaxos_server/: Cargo.toml  Dockerfile
omnipaxos_server/src/: database.rs  kv.rs  main.rs  network.rs  server.rs  util.rs
src/: controller.rs  main.rs  messages.rs  utils.rs
src/ui/: mod.rs
src/ui/ui_app/: mod.rs
