[package]
name = "coordinator"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "net", "io-util", "time", "io-std"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
rand = "0.8"
crossterm = "0.26.1"
ratatui = "0.20.1"
tui-input = "0.7.0"
tui-textarea = { git = "https://github.com/rhysd/tui-textarea", version = "*", features = ["ratatui-crossterm"], default-features = false }
chrono = "0.4.24"

[[bin]]
name = "app"
path = "src/main.rs"
