[package]
name = "coordinator"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "net", "io-util", "time", "io-std"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
rand = "0.8"
crossterm = "0.27.0"
ratatui = "0.23.0"
tui-input = "0.7.0"
tui-textarea = { version = "0.2.2", features = ["ratatui-crossterm"], default-features = false }
chrono = "0.4.24"

[[bin]]
name = "app"
path = "src/main.rs"
