[package]
name = "kv_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# omnipaxos = { version = "0.2.0", features = ["serde", "macros"] }
omnipaxos = { git = "https://github.com/TimXLHan/omnipaxos.git", branch = "ui", features = ["serde", "macros", "ui"] }
omnipaxos_storage = { git = 'https://github.com/TimXLHan/omnipaxos.git', branch = "ui"  }
# omnipaxos_storage = "0.2.0"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "net", "io-util", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
lazy_static = "1.4"
sled = "0.34.7"

[[bin]]
name = "app"
path = "src/main.rs"
